Made adjustments to the page majorly and updated the puictures

--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
                 <div class="gallery-item">
                     <img src="img/pic1.jpg" alt="Electric Motorcycle">
                     <div class="gallery-overlay">
-                        <p>X-ENERGI Electric Motorcycle</p>
+                        <p>X-ENERGI Electric Motorcycles</p>
                     </div>
                 </div>
                 <div class="gallery-item">
                     <img src="img/pic2.jpg" alt="Battery Swap Station">
                     <div class="gallery-overlay">
-                        <p>Battery Swap Station</p>
+                        <p>X-ENERGI rider with bt </p>
                     </div>
                 </div>
                 <div class="gallery-item">
@@ -130,21 +130,21 @@
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="img/pic9.jpg" alt="Solar Charging">
+                    <img src="img/pic14.png" alt="Solar Charging">
                     <div class="gallery-overlay">
-                        <p>Solar Charging Infrastructure</p>
+                        <p>X-ENERGI Riders</p>
                     </div>
                 </div>
                 <div class="gallery-item">
                     <img src="img/pic7.jpg" alt="Operations">
                     <div class="gallery-overlay">
-                        <p>Operations Center</p>
+                        <p>Solar Charging Infrastructur</p>
                     </div>
                 </div>
                 <div class="gallery-item">
-                    <img src="img/placeholder.jpg" alt="Future Expansion">
+                    <img src="img/pic4.jpg" alt="Future Expansion">
                     <div class="gallery-overlay">
-                        <p>Future Expansion Plans</p>
+                        <p>Electric Motorcycle</p>
                     </div>
                 </div>
             </div>
@@ -206,7 +206,6 @@
                         <p><i class="fab fa-whatsapp"></i> <strong>WhatsApp:</strong> +260964317558</p>
                         <p><i class="fas fa-phone"></i> <strong>Phone:</strong> +260964317558</p>
                         <p><i class="fas fa-envelope"></i> <strong>Email:</strong> v2sam@126.com</p>
-                        <p><i class="fas fa-globe"></i> <strong>Website:</strong> www.x-energyi.co.zm</p>
                     </div>
                     <p>Join us and transform African logistics with clean power!</p>
                 </div>
