Remove leading dots from image source paths

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header id="header">
     <nav class="container">
       <div class="logo">
-        <img src="./public/images/logo.jpg" alt="X-ENERGI" class="logo-img">
+        <img src="public/images/logo.jpg" alt="X-ENERGI" class="logo-img">
       </div>
       <ul class="nav-links">
         <li><a href="#overview">Overview</a></li>
@@ -61,7 +61,7 @@
               creating a sustainable ecosystem that benefits riders, businesses, and the environment.</p>
           </div>
           <div class="overview-image">
-            <img src="./public/images/overview.png" alt="X-ENERGI Delivery Rider"
+            <img src="public/images/overview.png" alt="X-ENERGI Delivery Rider"
               class="img-fluid rounded-lg shadow-lg">
           </div>
         </div>
@@ -126,22 +126,22 @@
         <h2 class="section-title">Our Ecosystem in Action</h2>
         <div class="gallery-grid">
           <div class="gallery-item item-1">
-            <img src="./public/images/pic1.jpg" alt="Electric Motorcycle">
+            <img src="public/images/pic1.jpg" alt="Electric Motorcycle">
           </div>
           <div class="gallery-item item-2">
-            <img src="./public/images/pic2.jpg" alt="Battery Swap Station">
+            <img src="public/images/pic2.jpg" alt="Battery Swap Station">
           </div>
           <div class="gallery-item item-3">
-            <img src="./public/images/pic3.jpg" alt="Rider in Action">
+            <img src="public/images/pic3.jpg" alt="Rider in Action">
           </div>
           <div class="gallery-item item-4">
-            <img src="./public/images/pic4.jpg" alt="Solar Infrastructure">
+            <img src="public/images/pic4.jpg" alt="Solar Infrastructure">
           </div>
           <div class="gallery-item item-5">
-            <img src="./public/images/pic14.png" alt="Happy Rider">
+            <img src="public/images/pic14.png" alt="Happy Rider">
           </div>
           <div class="gallery-item item-6">
-            <img src="./public/images/pic7.jpg" alt="Battery Technology">
+            <img src="public/images/pic7.jpg" alt="Battery Technology">
           </div>
         </div>
       </div>
