--- a/index.html
+++ b/index.html
@@ -3,19 +3,18 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>X-ENERGI™ | Electric Motorcycle + Battery Swap Ecosystem</title>
   <meta name="description"
     content="Green Powered · Profit Driven · Partner Enabled. Transforming African last-mile delivery with clean, efficient, and cost-effective solutions." />
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header id="header">
     <nav class="container">
       <div class="logo">
-        <img src="./public/images/logo.jpg" alt="X-ENERGI" class="logo-img">
+        <img src="public/images/logo.jpg" alt="X-ENERGI" class="logo-img">
       </div>
       <ul class="nav-links">
         <li><a href="#overview">Overview</a></li>
@@ -61,7 +60,7 @@
               creating a sustainable ecosystem that benefits riders, businesses, and the environment.</p>
           </div>
           <div class="overview-image">
-            <img src="./public/images/overview.png" alt="X-ENERGI Delivery Rider"
+            <img src="public/images/overview.png" alt="X-ENERGI Delivery Rider"
               class="img-fluid rounded-lg shadow-lg">
           </div>
         </div>
@@ -126,22 +125,22 @@
         <h2 class="section-title">Our Ecosystem in Action</h2>
         <div class="gallery-grid">
           <div class="gallery-item item-1">
-            <img src="./public/images/pic1.jpg" alt="Electric Motorcycle">
+            <img src="public/images/pic1.jpg" alt="Electric Motorcycle">
           </div>
           <div class="gallery-item item-2">
-            <img src="./public/images/pic2.jpg" alt="Battery Swap Station">
+            <img src="public/images/pic2.jpg" alt="Battery Swap Station">
           </div>
           <div class="gallery-item item-3">
-            <img src="./public/images/pic3.jpg" alt="Rider in Action">
+            <img src="public/images/pic3.jpg" alt="Rider in Action">
           </div>
           <div class="gallery-item item-4">
-            <img src="./public/images/pic4.jpg" alt="Solar Infrastructure">
+            <img src="public/images/pic4.jpg" alt="Solar Infrastructure">
           </div>
           <div class="gallery-item item-5">
-            <img src="./public/images/pic14.png" alt="Happy Rider">
+            <img src="public/images/pic14.png" alt="Happy Rider">
           </div>
           <div class="gallery-item item-6">
-            <img src="./public/images/pic7.jpg" alt="Battery Technology">
+            <img src="public/images/pic7.jpg" alt="Battery Technology">
           </div>
         </div>
       </div>
